# pyrene-state-observation

./: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt~  DEADJOE
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  pyrene-state-observation.pc
_build/cmake/: cmake_uninstall.cmake
_build/doc/: Doxyfile
_build/include/pyrene-state-observation/: config.hh  deprecated.hh  warning.hh
_build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libpyrene-state-observation.so.  libpyrene-state-observation.so.0.0-1-g051d-dirty  libpyrene-state-observation.so.0.0-5-gd8ae-dirty  libpyrene-state-observation.so.0.0-7-g5c10-dirty  libpyrene-state-observation.so.0.0-dirty  libpyrene-state-observation.so.UNKNOWN-dirty
_build/unit-testings/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-definitions_exe  test-gaussian-white-noise_exe  test-inertia-pinocchio_exe  test-kalman-filter-base_exe  test-multibody-flexible-dynamical-system  test-multibody-flexible-dynamical-system_exe
include/pyrene-state-observation/flexibility-estimation/: multibody-flexible-dynamical-system.hpp~
include/pyrene-state-observation/pyrene-flexibility-estimation/: elastic-frame-dynamical-system.hpp  model-base-ekf-flex-estimator-imu.hpp  multibody-ekf-flexibility-estimator.hpp  multibody-flexible-dynamical-system.hpp  multibody-flexible-dynamical-system.hpp~
include/pyrene-state-observation/tools/: pyrene.hpp
include/state-observation/dynamical-system/: dynamical-system-functor-base.hpp  dynamical-system-simulator.hpp
include/state-observation/flexibility-estimation/: multibody-flexible-dynamical-system.hpp
include/state-observation/noise/: gaussian-white-noise.hpp  noise-base.hpp
include/state-observation/tools/: definitions.hpp  definitions.hxx  probability-law-simulation.hpp
src/: CMakeLists.txt  CMakeLists.txt~  cmakelists.save  definitions.cpp  dynamical-system-functor-base.cpp  dynamical-system-simulator.cpp  gaussian-white-noise.cpp  multibody-ekf-flexibility-estimator.cpp  multibody-flexible-dynamical-system.cpp  multibody-flexible-dynamical-system.cpp~
unit-testings/: CMakeLists.txt  CMakeLists.txt~  test-definitions.cpp  test-gaussian-white-noise.cpp  test-inertia-pinocchio.cpp  test-kalman-filter-base.cpp  test-multibody-flexible-dynamical-system  test-multibody-flexible-dynamical-system.cpp  test-multibody-flexible-dynamical-system.cpp~  test-state-dynamics.cpp
